# dumb-chess

./: README.md  dumb.py  evaluation.py  pyproject.toml
