[tool.poetry]
name = "dumb-chess"
version = "0.1.0"
description = ""
authors = ["Ian Wolterstorff <wolterstorff.i@northeastern.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
chess = "^1.8.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
